<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pcdiy.moovedit.GalleryActivity" >

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_select_check"
        android:title="@string/action_select_check"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_select_delete"
        android:title="@string/action_select_delete"
        android:icon="@drawable/ic_action_discard"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_select_properties"
        android:title="@string/action_select_properties"
        android:enabled="false"
        app:showAsAction="never"/>

</menu>
